fixed drawer issue with setting inline overflow to hidden instead of just directional overflow

--- a/controls/app/viewcontrols/app.viewcontrol.less
+++ b/controls/app/viewcontrols/app.viewcontrol.less
@@ -1,6 +1,10 @@
 @import (reference) '../../controls/global/variables.less';
 @import (reference) '../../controls/mixins/helpers.less';
 
+body {
+    overflow-x: hidden;
+}
+
 .content-container {
     #platui > #mixins;
     #platui > #variables;
